--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/education/">Education</a>
+            <a href="{{ site.baseurl }}/experience/">Experience</a>
+            <a href="{{ site.baseurl }}/projects/">Projects</a>
+            <a href="{{ site.baseurl }}/skills/">Skills</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
