--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,10 +20,10 @@
         <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     
         <!-- Bootstrap Core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     
         <!-- Custom CSS -->
-        <link href="css/landing-page.css" rel="stylesheet">
+        <link href="{{ site.baseurl }}/css/landing-page.css" rel="stylesheet">
     
         <!-- Custom Fonts -->
         <script src="https://use.fontawesome.com/071362647b.js"></script>
@@ -41,9 +41,9 @@
         <![endif]-->
     
         <!-- Instafeed.js -->
-        <script type="text/javascript" src="js/instafeed.min.js"></script>
+        <!-- <script type="text/javascript" src="js/instafeed.min.js"></script> -->
     
         <!-- particles.js -->
-        <script type="text/javascript" src="js/particles.js"></script>
+        <!-- <script type="text/javascript" src="js/particles.js"></script> -->
     
     </head>
