fixed style issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,12 @@
   <body>
     {% include banner.html %}
 
-    <div id="main" role="main" class="container">
+    <!-- <div id="main" role="main" class="container"> -->
       {{ content }}
-    </div>
+    <!-- </div> -->
 
     <div class="wrapper-footer">
-      <div class="container">
+      <div class="">
         <footer class="footer">
           {% include svg-icons.html %}
         </footer>
