--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,7 +31,7 @@
     
         <!-- Custom Logo for Icon Shortcut-->
         <link rel="shortcut icon"
-              href="https://raw.githubusercontent.com/WesleyyC/wesleyyc.github.io/master/img/logo/logo.ico">
+              href="https://cdn1.iconfinder.com/data/icons/artificial-intelligence-3/128/Neural-Network-Ai-Convolutional-Deep-Learning-Machine-512.png">
     
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
