--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -250,16 +250,48 @@
      width:100%;
      height:100vh;
  }
+
+ .title-icons {
+     display:block;
+     
+ }
  
  #particles-js{
    width: 100%;
-   height: 100%;
+   height: 80vh;
    /*background-color: #808B96;*/
    background-image: url(../img/intro-brain.jpg);
    background-size: cover;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    position:relative;
+   text-align: center;
+
+   display:flex;
+   align-items: center;
+   justify-content: center;
+ }
+
+ #projects {
+     height: 60vh;
+ }
+
+ .site-title {
+     display: block;
+ }
+
+ .siste-description {
+     display: block;
+ }
+
+ .vertical {
+    display:table-cell; vertical-align:middle
  }
  
- #particles-js canvas { position:absolute; top:0; left:0; z-index:0 }
+ #particles-js canvas { 
+     position:absolute; 
+     top:0; 
+     left:0; 
+     z-index:-1; 
+     height: 80vh;
+}
