--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -13,6 +13,7 @@
             <a href="{{ site.baseurl }}/experience/">Experience</a>
             <a href="{{ site.baseurl }}/projects/">Projects</a>
             <a href="{{ site.baseurl }}/skills/">Skills</a>
+            <a href="{{ site.baseurl }}/publications/">Publications</a>
         </nav>
         </header>
     </div>
