--- a/_includes/index_page.html
+++ b/_includes/index_page.html
@@ -6,7 +6,7 @@
     
                 <h1 class="vertical">
                     <span class="site-title">Akshat Shrivastava</span>
-                    <span class="site-description">Master's Student In Computer Science</span>
+                    <span class="site-description">Machine Learning Engineer at Facebook</span>
 
                     <span class="title-icons">{% include svg-icons.html %}</span>
                 </h1>
