--- a/_includes/index_page.html
+++ b/_includes/index_page.html
@@ -6,7 +6,7 @@
     
                 <h1 class="vertical">
                     <span class="site-title">Akshat Shrivastava</span>
-                    <span class="site-description">Research Scientist at Meta AI (FAIR)</span>
+                    <span class="site-description">Co-founder &amp CTO of Perceptron AI</span>
 
                     <span class="title-icons">{% include svg-icons.html %}</span>
                 </h1>
